--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,12 @@ httpx = "^0.24.1"
 jinja2 = "^3.1.2"
 toml = "^0.10.2"
 textstat = "^0.7.3"
+markdown = "^3.5.1"
 
 [tool.ruff]
 line-length = 100
 
 [tool.ruff.lint]
-# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
-# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
-# McCabe complexity (`C901`) by default.
 select = ["E4", "E7", "E9", "F"]
 ignore = []
 
