Add CFF file check

--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,7 @@ description  = true # Check that the repo has a description
 topics       = true # Check that the repo has keywords
 license      = true # Check that the repo has a license
 updated      = true # Display the last update
+cff          = true # Check that the repo is citable
 readme       = true # Check that the repo has a readme
 readability  = true # Display the readability score for the readme
 sections     = ["Contact", "Contributing"] # Check that these sections exist
