--- a/config.toml
+++ b/config.toml
@@ -6,12 +6,12 @@ title = "SoDa FAIR projects dashboard"
 header = "FAIR projects dashboard"
 
 [metrics]
-description  = true # Check that the repo has a description
-topics       = true # Check that the repo has keywords
-license      = true # Check that the repo has a license
-updated      = true # Display the last update
-cff          = true # Check that the repo is citable
-readme       = true # Check that the repo has a readme
-readability  = true # Display the readability score for the readme
-sections     = ["Contact", "Contributing"] # Check that these sections exist
+description  = true  # Check that the repo has a description
+topics       = true  # Check that the repo has keywords
+license      = true  # Check that the repo has a license
+updated      = true  # Display the last update
+cff          = false # Check that the repo is citable with cff file
+readme       = true  # Check that the repo has a readme
+readability  = true  # Display the readability score for the readme
+sections     = ["Contact", "Contributing"] # Check that these sections are in readme
 
