--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Dashboard for tracking your organization's repo"
 authors = ["Erik-Jan van Kesteren <erikjanvankesteren@pm.me>", "Donatas Rasiukevičius <donatas@rasiukevicius.dev>"]
 readme = "readme.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
