--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -19,25 +19,14 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade poetry
-          poetry install -n --all-extras
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5
       - name: Build
         env:
           GH_PAT: ${{ secrets.SODA_DASH_PAT }}
-        run: poetry run python main.py
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
+        run: uv run main.py
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
